--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="header">
       <div class="container">
         <div class="logo">
-          <img class="logo" src="/images/logo.png" alt>
+          <img class="logo" src="images/logo.png" alt>
         </div>
         <div class="links">
           <i class="fa-solid fa-bars-staggered"></i>
@@ -126,7 +126,7 @@
           </div>
           <div class="col">
             <div class="image image-column">
-              <img src="/images/services.jpg" alt>
+              <img src="images/services.jpg" alt>
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
         <p>If you do it right, it will last forever.</p>
         <div class="portfolio-content">
           <div class="card">
-            <img src="/images/portfolio-1.jpg" alt>
+            <img src="images/portfolio-1.jpg" alt>
             <div class="info">
               <h3>Project Here</h3>
               <p>My creative ability is very difficult to measure because it
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/images/portfolio-2.jpg" alt>
+            <img src="images/portfolio-2.jpg" alt>
             <div class="info">
               <h3>Project Here</h3>
               <p>My creative ability is very difficult to measure because it
@@ -156,7 +156,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/images/portfolio-3.jpg" alt>
+            <img src="images/portfolio-3.jpg" alt>
             <div class="info">
               <h3>Project Here</h3>
               <p>My creative ability is very difficult to measure because it
@@ -174,7 +174,7 @@
         <p>Less is more work</p>
         <div class="about-content">
           <div class="image">
-            <img src="/images/about.jpg" alt>
+            <img src="images/about.jpg" alt>
           </div>
           <div class="text">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor
@@ -184,7 +184,7 @@
             <hr>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel
               eligendi asperiores dolore numquam quia dolorem minus tenetur hic
-              aperiam! At, illo consequatur? Culpa porro rerum repudiandae
+              aperiam! At, illo consequatur? Culpa poro rerum repudiandae
               quaerat! Libero, consequuntur voluptates.</p>
           </div>
         </div>
